feat: exclude current user from notification sending in createMultiple method